--- a/cybron-partners.html
+++ b/cybron-partners.html
@@ -10,7 +10,7 @@
     <!-- FONT AWEOSEOM -->
 
     <!-- EXTERNEL CSS FILE -->
-    <link rel="stylesheet" href="CSS/style.css">
+     <link rel="stylesheet" href="css/style.css">
     <!-- EXTERNEL CSS FILE -->
 
     <!-- Bootstrap CSS -->
@@ -122,21 +122,21 @@
               <span class="navhover"></span>
               <ul class="dropdown-menu mx-auto">
                 <li>
-                  <a class="dropdown-item nav-link" href="about.html">About
+                  <a class="dropdown-item nav-link"  href="about-cybron.html">About
                     Cybron</a>
 
                 </li>
                 <li>
-                  <a class="dropdown-item nav-link" href="why.html">Why Chose
+                  <a class="dropdown-item nav-link" href="why-choose-us.html">Why Chose
                     US</a>
                 </li>
                 <li>
                   <a class="dropdown-item nav-link"
-                    href="evolution.html">Evolution of Cybron</a>
+                    href="evolution-of-cybron.html">Evolution of Cybron</a>
                 </li>
                 <li>
                   <a class="dropdown-item nav-link"
-                    href="framework.html">Framework of Cybron</a>
+                    href="cybron-framework.html">Framework of Cybron</a>
                 </li>
                 <li>
                   <a class="dropdown-item nav-link"
@@ -144,7 +144,7 @@
                 </li>
                 <li>
                   <a class="dropdown-item nav-link"
-                    href="assessment.html">Assessment and Methodology</a>
+                    href="assessment-and-methodology.html">Assessment and Methodology</a>
                 </li>
                 <li>
                   <a class="dropdown-item nav-link" href="careers.html">Careers
@@ -162,16 +162,16 @@
               <ul class="dropdown-menu mx-auto">
                 <li>
                   <a class="dropdown-item nav-link"
-                    href="ScoutMemberships.html">Cybron Scout Memberships</a>
+                    href="cybron-scout-memberships.html">Cybron Scout Memberships</a>
                 </li>
                 <li>
                   <a class="dropdown-item nav-link"
-                    href="AssociateMemberships.html">Cybron Associate
+                    href="cybron-associate-memberships.html">Cybron Associate
                     Memberships</a>
                 </li>
                 <li>
                   <a class="dropdown-item nav-link"
-                    href="ProfessionalMemberships.html"> Cybron Professional
+                    href="cybron-professional-memberships.html"> Cybron Professional
                     Memberships</a>
                 </li>
               </ul>
@@ -189,60 +189,60 @@
                   <!-- Cybron Scout Certifications -->
                   <div class="col-lg-3 col-md-6">
                     <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
-                    <a class="dropdown-item" href="6thgrade.html">Cybron Scout
+                    <a class="dropdown-item" href="cybron-scout-grade-6-certification.html">Cybron Scout
                       Grade 6 Certification</a>
-                    <a class="dropdown-item" href="7thgrade.html">Cybron Scout
+                    <a class="dropdown-item" href="cybron-scout-grade-7-certification.html">Cybron Scout
                       Grade 7 Certification</a>
-                    <a class="dropdown-item" href="8thgrade.html">Cybron Scout
+                    <a class="dropdown-item" href="cybron-scout-grade-8-certification.html">Cybron Scout
                       Grade 8 Certification</a>
-                    <a class="dropdown-item" href="9thgrade.html">Cybron Scout
+                    <a class="dropdown-item" href="cybron-scout-grade-9-certification.html">Cybron Scout
                       Grade 9 Certification</a>
-                    <a class="dropdown-item" href="10thgrade.html">Cybron Scout
+                    <a class="dropdown-item" href="cybron-scout-grade-10-certification.html">Cybron Scout
                       Grade 10 Certification</a>
-                    <a class="dropdown-item" href="diploma.html">Cybron
+                    <a class="dropdown-item" href="cybron-scout-grade-10-certification.html">Cybron
                       Diploma</a>
                   </div>
                   <!-- Cybron Associate Certifications -->
                   <div class="col-lg-3 col-md-6">
                     <h6 class="dropdown-header">CYBRON ASSOCIATE
                       CERTIFICATIONS</h6>
-                    <a class="dropdown-item" href="fundamentals.html">Cybron
+                    <a class="dropdown-item" href="cybron-fundamentals.html">Cybron
                       Fundamentals</a>
-                    <a class="dropdown-item" href="cybron.html">Cybron +</a>
-                    <a class="dropdown-item" href="bluehacking.html">True Blue
+                    <a class="dropdown-item" href="cybron-plus.html">Cybron +</a>
+                    <a class="dropdown-item" href="true-blue-hacking.html">True Blue
                       Hacking</a>
-                    <a class="dropdown-item" href="bluehacking+.html">True Blue
+                    <a class="dropdown-item" href="true-blue-hacking-plus.html">True Blue
                       Hacking +</a>
                   </div>
                   <!-- Cybron Security Professional -->
                   <div class="col-lg-3 col-md-6">
                     <h6 class="dropdown-header">CYBRON SECURITY
                       PROFESSIONAL</h6>
-                    <a class="dropdown-item" href="offensive.html">Cybron
+                    <a class="dropdown-item" href="cybron-offensive-security-professional.html">Cybron
                       Offensive Security</a>
-                    <a class="dropdown-item" href="Infrastructure.html">Cybron
+                    <a class="dropdown-item" href="cybron-infrastructure-security.html">Cybron
                       Infrastructure Security</a>
-                    <a class="dropdown-item" href="Network.html">Cybron Network
+                    <a class="dropdown-item" href="cybron-network-security-professional.html">Cybron Network
                       Security</a>
-                    <a class="dropdown-item" href="Application.html">Cybron
+                    <a class="dropdown-item" href="cybron-application-security.html">Cybron
                       Application Security</a>
-                    <a class="dropdown-item" href="Architecture.html">Cybron
+                    <a class="dropdown-item" href="cybron-security-architecture.html">Cybron
                       Security Architecture</a>
-                    <a class="dropdown-item" href="Engineering.html">Cybron
+                    <a class="dropdown-item" href="cybron-security-engineering.html">Cybron
                       Security Engineering</a>
-                    <a class="dropdown-item" href="Management.html">Cybron
+                    <a class="dropdown-item" href="cybron-security-management.html">Cybron
                       Security Management</a>
                   </div>
                   <!-- Cybron Network -->
                   <div class="col-lg-3 col-md-6">
                     <h6 class="dropdown-header">CYBRON NETWORK</h6>
-                    <a class="dropdown-item" href="Partners.html">Cybron
+                    <a class="dropdown-item" href="cybron-partners.html">Cybron
                       Partners</a>
-                    <a class="dropdown-item" href="BecomePartner.html">Become a
+                    <a class="dropdown-item" href="become-a-partner.html">Become a
                       Partner</a>
-                    <a class="dropdown-item" href="Trainers.html">Cybron
+                    <a class="dropdown-item" href="cybron-trainers.html">Cybron
                       Trainers</a>
-                    <a class="dropdown-item" href="BecomeTrainer.html">Become a
+                    <a class="dropdown-item" href="become-a-trainer.html">Become a
                       Trainer</a>
                   </div>
                 </div>
@@ -255,7 +255,7 @@
               <span class="navhover"></span>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+              <a class="nav-link" href="contact-us.html">Contact Us</a>
               <span class="navhover"></span>
             </li>
           </ul>
@@ -293,26 +293,26 @@
               data-bs-toggle="dropdown" aria-expanded="false">Cybron</a>
             <ul class="dropdown-menu mx-auto">
               <li>
-                <a class="dropdown-item nav-link" href="about.html">About
+                <a class="dropdown-item nav-link"  href="about-cybron.html">About
                   Cybron</a>
               </li>
               <li>
-                <a class="dropdown-item nav-link" href="why.html">Why Chose
+                <a class="dropdown-item nav-link" href="why-choose-us.html">Why Chose
                   US</a>
               </li>
               <li>
                 <a class="dropdown-item nav-link"
-                  href="evolution.html">Evolution of Cybron</a>
+                  href="evolution-of-cybron.html">Evolution of Cybron</a>
               </li>
               <li>
                 <a class="dropdown-item nav-link"
-                  href="framework.html">Framework of Cybron</a>
+                  href="cybron-framework.html">Framework of Cybron</a>
               </li> <li>
                 <a class="dropdown-item nav-link"
                   href="certifications.html">Certfication</a>
               </li> <li>
                 <a class="dropdown-item nav-link"
-                  href="assessment.html">Assessment and Methodology</a>
+                  href="assessment-and-methodology.html">Assessment and Methodology</a>
               </li> <li>
                 <a class="dropdown-item nav-link" href="careers.html">Careers &
                   Opportunities</a>
@@ -326,16 +326,16 @@
             <ul class="dropdown-menu mx-auto">
               <li>
                 <a class="dropdown-item nav-link"
-                  href="ScoutMemberships.html">Cybron Scout Memberships</a>
+                  href="cybron-scout-memberships.html">Cybron Scout Memberships</a>
               </li>
               <li>
                 <a class="dropdown-item nav-link"
-                  href="AssociateMemberships.html">Cybron Associate
+                  href="cybron-associate-memberships.html">Cybron Associate
                   Memberships</a>
               </li>
               <li>
                 <a class="dropdown-item nav-link"
-                  href="ProfessionalMemberships.html"> Cybron Professional
+                  href="cybron-professional-memberships.html"> Cybron Professional
                   Memberships</a>
               </li>
             </ul>
@@ -349,52 +349,52 @@
             <ul class="dropdown-menu  py-lg-3  p-lg-3 ">
 
               <h6 class="dropdown-header">CYBRON SCOUT CERTIFICATIONS</h6>
-              <a class="dropdown-item nav-link" href="6thgrade.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-scout-grade-6-certification.html">Cybron
                 Scout Grade 6 Certification</a>
-              <a class="dropdown-item nav-link" href="7thgrade.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-scout-grade-7-certification.html">Cybron
                 Scout Grade 7 Certification</a>
-              <a class="dropdown-item nav-link" href="8thgrade.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-scout-grade-8-certification.html">Cybron
                 Scout Grade 8 Certification</a>
-              <a class="dropdown-item nav-link" href="9thgrade.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-scout-grade-9-certification.html">Cybron
                 Scout Grade 9 Certification</a>
-              <a class="dropdown-item nav-link" href="10thgrade.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-scout-grade-10-certification.html">Cybron
                 Scout Grade 10 Certification</a>
-              <a class="dropdown-item nav-link" href="diploma.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-scout-grade-10-certification.html">Cybron
                 Diploma</a>
 
               <h6 class="dropdown-header">CYBRON ASSOCIATE CERTIFICATIONS</h6>
-              <a class="dropdown-item nav-link" href="fundamentals.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-fundamentals.html">Cybron
                 Fundamentals</a>
-              <a class="dropdown-item nav-link" href="cybron.html">Cybron +</a>
-              <a class="dropdown-item nav-link" href="bluehacking.html">True
+              <a class="dropdown-item nav-link" href="cybron-plus.html">Cybron +</a>
+              <a class="dropdown-item nav-link" href="true-blue-hacking.html">True
                 Blue Hacking</a>
-              <a class="dropdown-item nav-link" href="bluehacking+.html">True
+              <a class="dropdown-item nav-link" href="true-blue-hacking-plus.html">True
                 Blue Hacking +</a>
 
               <h6 class="dropdown-header">CYBRON SECURITY PROFESSIONAL</h6>
-              <a class="dropdown-item nav-link" href="offensive.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-offensive-security-professional.html">Cybron
                 Offensive Security</a>
               <a class="dropdown-item nav-link"
-                href="Infrastructure.html">Cybron Infrastructure Security</a>
-              <a class="dropdown-item nav-link" href="Network.html">Cybron
+                href="cybron-infrastructure-security.html">Cybron Infrastructure Security</a>
+              <a class="dropdown-item nav-link" href="cybron-network-security-professional.html">Cybron
                 Network Security</a>
-              <a class="dropdown-item nav-link" href="Application.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-application-security.html">Cybron
                 Application Security</a>
-              <a class="dropdown-item nav-link" href="Architecture.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-security-architecture.html">Cybron
                 Security Architecture</a>
-              <a class="dropdown-item nav-link" href="Engineering.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-security-engineering.html">Cybron
                 Security Engineering</a>
-              <a class="dropdown-item nav-link" href="Management.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-security-management.html">Cybron
                 Security Management</a>
 
               <h6 class="dropdown-header">CYBRON NETWORK</h6>
-              <a class="dropdown-item nav-link" href="Partners.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-partners.html">Cybron
                 Partners</a>
-              <a class="dropdown-item nav-link" href="BecomePartner.html">Become
+              <a class="dropdown-item nav-link" href="become-a-partner.html">Become
                 a Partner</a>
-              <a class="dropdown-item nav-link" href="Trainers.html">Cybron
+              <a class="dropdown-item nav-link" href="cybron-trainers.html">Cybron
                 Trainers</a>
-              <a class="dropdown-item nav-link" href="BecomeTrainer.html">Become
+              <a class="dropdown-item nav-link" href="become-a-trainer.html">Become
                 a Trainer</a>
 
             </ul>
@@ -406,7 +406,7 @@
             <a class="nav-link" aria-current="page" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="contact.html">Contact
+            <a class="nav-link" aria-current="page" href="contact-us.html">Contact
               Us</a>
           </li>
         </ul>
@@ -561,15 +561,15 @@
           <div class="col-lg-3 col-md-6 mb-4">
             <h5 class="mb-3">Cybron Services</h5>
             <ul class="list-unstyled">
-              <li><a href="about.html"
+              <li><a  href="about-cybron.html"
                   class="text-dark text-decoration-none">About Cybron</a></li>
-              <li><a href="ScoutMemberships.html"
+              <li><a href="cybron-scout-memberships.html"
                   class="text-dark text-decoration-none">Memberships</a></li>
               <li><a href="certifications.html"
                   class="text-dark text-decoration-none">Certifications</a></li>
-              <li><a href="Partners.html"
+              <li><a href="cybron-partners.html"
                   class="text-dark text-decoration-none">Partners</a></li>
-              <li><a href="Trainers.html"
+              <li><a href="cybron-trainers.html"
                   class="text-dark text-decoration-none">Trainers</a></li>
             </ul>
           </div>
@@ -578,10 +578,10 @@
           <div class="col-lg-3 col-md-6 mb-4">
             <h5 class="mb-3">Quick Links</h5>
             <ul class="list-unstyled">
-              <li><a href="BecomePartner.html"
+              <li><a href="become-a-partner.html"
                   class="text-dark text-decoration-none">Enroll Your
                   School</a></li>
-              <li><a href="BecomeTrainer.html"
+              <li><a href="become-a-trainer.html"
                   class="text-dark text-decoration-none">Self Enrollment
                   Process</a></li>
               <li><a href="index.html"
@@ -601,10 +601,10 @@
             <ul class="list-unstyled">
               <li><a href="mailto:cybron@cybroninternational.com"
                   class="text-dark text-decoration-none">Email Us</a></li>
-              <li><a href="about.html"
+              <li><a  href="about-cybron.html"
                   class="text-dark text-decoration-none">Pricing and
                   Plans</a></li>
-              <li><a href="contact.html"
+              <li><a href="contact-us.html"
                   class="text-dark text-decoration-none">Contact Us</a></li>
               <li><a href="index.html"
                   class="text-dark text-decoration-none">Cookies Policy</a></li>
@@ -639,7 +639,7 @@
       src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
     <!-- EXTERNEL JS FILE -->
-    <script src="JS/app.js"></script>
+    <script src="js/app.js"></script>
     <!-- EXTERNEL JS FILE -->
 
   </body>
