--- a/cybron-scout-grade-9-certification.html
+++ b/cybron-scout-grade-9-certification.html
@@ -21,7 +21,7 @@
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Cybron Scout Grade 7 Certification – Cybron Security</title>
+  <title>Cybron Scout Grade 9 Certification – Cybron Security</title>
 
 </head>
 
@@ -91,7 +91,7 @@
   <nav class="navbar navbar-expand-lg px-0 py-0 container-fluid d-flex flex-column" id="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="assets/Images//logo/logo.png" alt="" class="col-lg-6 col-5" /> <!-- Replace with actual logo path -->
+        <img src="assets/Images/logo/logo.png" alt="" class="col-lg-6 col-5" /> <!-- Replace with actual logo path -->
       </a>
       <button class="btn d-lg-none navbar-expand-lg" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
@@ -342,9 +342,9 @@
   <div id="carouselExampleFade" class="aboutback d-flex justify-content-center align-items-center"
     data-bs-ride="carousel">
     <div class="text-center d-flex flex-column justify-content-center align-items-center">
-      <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Cybron Scout Grade 7 Certification</h1>
+      <h1 class=" text-center text-col display-4 fw-bold mb-3 mt-5 ">Cybron Scout Grade 9 Certification</h1>
       <h5 class=" text-center text-col fw-normal mt-2 col-lg-9 col-12">
-        Home / Cybron Scout Grade 7 Certification</h5>
+        Home / Cybron Scout Grade 9 Certification</h5>
     </div>
   </div>
 
@@ -357,20 +357,19 @@
       <img src="assets/Images/Banner/evulation_banner.png" class=" whycol-11 img-fluid h-100 position-absolute" alt="">
 
     </div>
-
     <!-- Right Section -->
     <div class="col-md-7 mt-lg-0 mt-4 px-lg-5 px-2 d-flex flex-column justify-content-center">
 
       <h3 class="fs-1 col-12 mb-5">
         Prepare Your Self to Become
-        Cybron Scout <span class="col-org">Grade 7 Standard Certification</span>
+        Cybron Scout <span class="col-org">Grade 9 Standard Certification</span>
       </h3>
       <p class="col-text">
         Cybron is the program which develop your skills in the field of cyber security. The platform provides you the
         top-notch literature and help you to meet your targets & goals in global world. As everything of your life is
         associated with the digital world and due to this you are using the different devices and technology. As you are
         getting so much benefits from the digital association, there are other risk and challenges, which is one of them
-        is cyber securiy. The Cybron Scout of Grade 7 students is equipped you regarding cyber security and also make
+        is cyber securiy. The Cybron Scout of Grade 9 students is equipped you regarding cyber security and also make
         you understandable as well as cure and protection techniques about different attacks and threats. The most
         important part of this program that it will take you from the scratch and provide you the detailed knowledge and
         literature, which makes you more understandable about the cyber security.
@@ -411,7 +410,7 @@
 
     </div>
 
-
+    </span>
   </div>
   <!-- EXPERICNE SECTION END -->
   <!-- LEFT COL START-->
@@ -426,7 +425,7 @@
         <p class="color-2 pt-3 text-justify1 text-justify">
           In today’s rapidly evolving digital landscape, information security threats are growing in complexity and
           frequency. To stay ahead of these challenges, it is crucial to implement and manage robust information
-          security systems and practices. Becoming a Cybron Scout Grade 7 empowers you to do just that by equipping you
+          security systems and practices. Becoming a Cybron Scout Grade 9 empowers you to do just that by equipping you
           with the necessary knowledge and skills to tackle modern security threats effectively.
         </p>
         <!--  -->
@@ -435,7 +434,7 @@
           <p class="color-2 col-11 text-justify">
             <span class="fw-bold  text-justify"> 1. Tackle Growing Security Threats <br></span>
             The digital world faces constant risks that require skilled professionals to mitigate and manage them. As a
-            Cybron Scout Grade 7, you will gain expertise in implementing an advanced Information Security Management
+            Cybron Scout Grade 9, you will gain expertise in implementing an advanced Information Security Management
             System (ISMS), tailored to counter the latest threats.
           </p>
         </div>
@@ -460,12 +459,12 @@
 
         <div class="ps-2 col-12 pt-3">
           <p class="color-2 col-11">
-            <span class="">1. School candidate from class 7th grade can opt this certification</span>
+            <span class="">1. School candidate from class 9th grade can opt this certification</span>
             <br><span class="">2. The content of the program will develop the skillset of candidate during their studies
             </span>
             <br><span class="">3. Everyone know about latest scams and threats regarding cybercrimes, this course will
               help a lot</span>
-            <br><span class="">4. Get the Cybron Scout 7th Grade Certification in One year</span>
+            <br><span class="">4. Get the Cybron Scout 9th Grade Certification in One year</span>
 
         </div>
 
@@ -483,10 +482,11 @@
           that they are secure and protected from different threats, attacks and risks.
         </p>
         <p class="color-2 pt-3">
-          In this context, our research team under the supervision of <span class="fw-bolder ">Dr. M. Shaheer
-            Waqar</span> has found that it is the pure game of the mind-set, because if the people can understand, how
-          these technologies are helpful and beneficial for their lives, so they cannot sabotage or harm it. But we
-          cannot stop the negative mind-set people who never do positive work for the mankind. </p>
+          In this context, our research team under the supervision of <span class="fw-bolder "><span
+              class="fw-bolder "></span>Dr. M. Shaheer Waqar</span></span> has found that it is the pure game of the
+          mind-set, because if the people can understand, how these technologies are helpful and beneficial for their
+          lives, so they cannot sabotage or harm it. But we cannot stop the negative mind-set people who never do
+          positive work for the mankind. </p>
         <p class="color-2 pt-3">
           Therefore, this framework has been established according to the aforementioned scenarios, and the knowledge
           set is established from the class 6 grade standard and providing them the required information according to
@@ -530,7 +530,7 @@
                 <td>2 hours</td>
               </tr>
               <tr>
-                <td>Required Lectures to Complete to class 6th Standard</td>
+                <td>Required Lectures to Complete to class 9th Standard</td>
                 <td>10</td>
               </tr>
               <tr>
@@ -542,7 +542,7 @@
                 <td>2 Credit Hours</td>
               </tr>
               <tr>
-                <td>Total Time to complete to class 6th Standard</td>
+                <td>Total Time to complete to class 9th Standard</td>
                 <td>One Year</td>
               </tr>
               <tr>
@@ -564,7 +564,7 @@
           <h5 class="col-org">Domain and task knowledge areas </h5>
         </div>
         <p class="color-2 pt-3">
-          In this document you will find an updated structure for the CYBRON SCOUT Class 7th Standard Examination
+          In this document you will find an updated structure for the CYBRON SCOUT Class 9th Standard Examination
           Content. Based on Experience Consultants and stakeholders, we have devised and simplifying the format so that
           the CYBRON SCOUT is easier to understand and interpret. </p>
         <h6><b>The domain and task are well defined on the following pages:</b></h6>
@@ -583,9 +583,8 @@
           <h5 class="col-org">Assessment and program</h5>
         </div>
         <p class="color-2 pt-3">
-          <span class="">1. The paper will be an open book and students can give the answers according to
-            scenarios</span>
-          <br><span class="">2. The paper will be online including practical and theory. </span>
+          <!-- <span class="">1. School candidate from class 9th grade can opt this certification</span> -->
+          <span class="">2. The paper will be online including practical and theory. </span>
           <br><span class="">3. The weightage of examination will be 70% practical, and 30% theoretical.</span>
           <br><span class="">4. Practical assessment will be taken in labs assess by internal examiners, where theory
             paper will be taken through online or paper based (if online facility not available) </span>
@@ -645,14 +644,21 @@
           current market requirements. You have to prepare to meet the demands of the market today due to the most
           complex and competitive environment of businesses. </p>
         <p class="color-2 pt-3">
-          <span class="">1. Continuously develop yourself and enhance your learning capability </span>
-          <br><span class="">2. Keep yourself updated about the latest trends in technologies and their vulnerabilities
-          </span>
-          <br><span class="">3. We encourage and recognize individualized learning opportunities .</span>
-          <br><span class="">4. 10 hours of learning CER is mandatory to make your cybron scout certification active
-          </span>
-          <br> <span class="">5. Global Recognition to sustain the valuable cybron scout certification of Cybron
-            International (CI)</span>
+          <span class="">1. School candidate from class 9th grade can opt this certification</span>
+          <br><span class="">2. The paper will be online including practical and theory. </span>
+          <br><span class="">3. The weightage of examination will be 70% practical, and 30% theoretical.</span>
+          <br><span class="">4. Practical assessment will be taken in labs assess by internal examiners, where theory
+            paper will be taken through online or paper based (if online facility not available) </span>
+          <br> <span class="">5. Those candidate who cannot be able to give the online test and they do not have a
+            facility, Therefore, their papers will be taken a paper based examination. Otherwise, center must have the
+            facility to provide online test mechanism to students and facilitate for the final assessment.</span>
+          <br><span class="">6. Assessment will be done according to domain and tasks defined above through our online
+            methodology </span>
+        <h6 class="col-org fw-bold">EVALUATION AND GRADING</h6>
+        <span class="color-2">1. The performance of students is evaluated through continuous observation of a student’s
+          performance in the class participation, submission of assignments, quizzes and exercises. </span>
+        <br><span class="color-2">2. The student will be examined through exams conducted by CYBRON INTERNATIONAL. Total
+          marks for passing the CERTIFICATION/DIPLOMA will be 70 out of a total of 100.</span>
 
         </p>
       </div>
@@ -672,7 +678,7 @@
         <p>Total Credentials : <span class="fw-normal text-dark">2 Credit Hours</span></p>
         <p class="text-capitalize"> one credit hour: <span class="fw-normal text-end text-dark">10 learning hours</span>
         </p>
-        <p>completion of 10 Courses : <span class="fw-normal text-dark">cybron scout for class 7th standard</span></p>
+        <p>completion of 10 Courses : <span class="fw-normal text-dark">cybron scout for class 9th standard</span></p>
         <p>Final Assessment : <span class="fw-normal text-dark">Online or physical assessment can be taken </span></p>
 
       </div>
@@ -748,9 +754,9 @@
       <div class="col-12">
         <button
           class="mt-3 btn3 col-lg-10 mx-auto col-10 p-2 d-flex flex-row align-items-center justify-content-center fw-bold">
-          <a href="cybron-scout-class-7-standard.docx" download="cybron-scout-class-7-standard.docx"
+          <a href="cybron-scout-class-9-standard.docx" download="cybron-scout-class-9-standard.docx"
             class="col-12 text-decoration-none ">
-            Download Grade 7 Scout brochure
+            Download Grade 9 Scout brochure
             <i class="fa-solid fa-download icon-hover col-lg-12">
 
             </i>
@@ -760,7 +766,7 @@
       <div class="mb-3 col-12 px-3  py-5 color-2 border border-2 shadow-lg rounded-3">
         <div class="col-12 d-flex flex-column mb-3">
 
-          <h6 class="fw-normal pb-2 pt-1 text-dark text-center">Cyber Scout 7 Grade</h6>
+          <h6 class="fw-normal pb-2 pt-1 text-dark text-center">Cyber Scout 6 Grade</h6>
           <ul>
             <li>Available in self-study format</li>
             <li>Available in eLearning format</li>
